syntax = "proto3";

option java_package = "ru.hse.spb.sd.full_metal_rogue";

enum Command {
    SELECT = 0;
    BACK = 1;
    UP = 2;
    DOWN = 3;
    LEFT = 4;
    RIGHT = 5;
    JOIN = 6;
}

message Action {
    string gameName = 1;
    string playerName = 2;
    Command command = 3;
}

message GameListRequest {
}

message GameListResponse {
    repeated string games = 1;
}

message CreateGameRequest {
    string gameName = 1;
}

message CreateGameResponse {
}

message View {
    string json = 1;
}

service FullMetalRogueServer {
    rpc joinGame(stream Action) returns (stream View) {}
    rpc getGameList(GameListRequest) returns (GameListResponse) {}
    rpc createGame(CreateGameRequest) returns (CreateGameResponse) {}
}